Bug 1152461 - Don't use tiled layers for overflow:hidden scroll frames. r=tn